# oppapi

./: README.md  pyproject.toml
examples/: choice.py  default.py  flatten.py  mod_datetime.py  mod_decimal.py  mod_ipaddress.py  mod_path.py  mod_uuid.py  nargs.py  primitive.py  pyproject.toml  rename.py  required.py  runner.py  short_long.py  simple.py  subcommand.py
oppapi/: __init__.py
