[tool.poetry]
name = "structopt-examples"
version = "0.0.1"
description = ""
authors = ["yukinarit <yukinarit84@gmail.com>"]
license = "MIT"
repository = "https://github.com/yukinarit/oppapi"
homepage = "https://github.com/yukinarit/oppapi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.0"
oppapi = {path = ".."}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
